plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.115'
    id 'org.jetbrains.kotlin.jvm'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = "${minecraft_version}-${mod_loader}-${mod_version}"
group = "${mod_group_id}"

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    version = project.minecraft_version + '-' + project.forge_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()
            programArguments.addAll("--username", "Dev")
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            systemProperty 'ias.skipDisableScanning', 'true'
            programArguments.addAll '--mod', project.mod_id, '--all',
                    '--output', file('src/generated/resources/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            systemProperty 'forge.logging.console.level', 'debug'
            systemProperty 'mixin.verbose', 'true'
            systemProperty 'mixin.export', 'true'
            systemProperty 'mixin.dumpTargetOnFailure', 'true'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    flatDir {
        dirs '../Genesis Lib/build/libs'
    }

    exclusiveContent {
        forRepository {
            maven {
                url "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }
    maven { url 'https://maven.blamejared.com' }
    flatDir {
        dir 'libs'
    }
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        url "https://maven.architectury.dev/"
    }
    maven {
        url "https://maven.latvian.dev/releases"
    }
    maven {
        name = "Flemmli97"
        url = "https://maven.blazing-coop.net/releases"
    }
    maven {
        url "https://maven.tterrag.com/"
    }
    mavenCentral()
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

jar {
    manifest.attributes([
            "FMLModType"  : "MOD",
            "MixinConfigs": "${mod_id}.mixins.json"
    ])
}

tasks.withType(ProcessResources).configureEach {
    filteringCharset = 'UTF-8'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_credits            : mod_credits,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.withType(Jar).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs += [
            "-AoutRefMapFile=${buildDir}/resources/main/${mod_id}.refmap.json",
            "-AdefaultObfuscationEnv=searge",
            "-Xlint:-deprecation",
            "-Xlint:-removal"
    ]
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
    kotlinOptions.freeCompilerArgs += ['-java-parameters']
    kotlinOptions.jvmTarget = '17'
}

dependencies {
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    modImplementation "miku.bai_ze_li:genesis_api:1.0-SNAPSHOT:dev"
    localRuntime "miku.bai_ze_li:genesis_api:1.0-SNAPSHOT:dev"

    if (jarJar.toBoolean()) {
        jarJar(group: 'miku.bai_ze_li', name: 'genesis_api', version: '[1.0-SNAPSHOT,)')
        jarJar(modImplementation "com.tterrag.registrate:Registrate:${registrate_version}")
        jarJar(modImplementation "curse.maven:vzlinglib-1316184:7482798")

        modImplementation(jarJar("local.libs:ix_api:1.0.8"))
        modImplementation(jarJar("local.libs:l2library:${l2library_version}-slim"))
        modImplementation(jarJar("local.libs:l2serial:1.2.2"))
        modImplementation(jarJar("local.libs:l2tabs:0.3.3"))
    }

    modImplementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.3"))

    modImplementation "curse.maven:cloth-config-348521:5729105"
    modImplementation "curse.maven:attributefix-280510:7612291"
    modImplementation "curse.maven:suixingxiugai-1349188:7147760"

    modCompileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    modCompileOnly "mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"
    modImplementation "mezz.jei:jei-${minecraft_version}-forge:${jei_version}"

    modCompileOnly "vazkii.patchouli:Patchouli:1.20.1-84.1-FORGE:api"
    modRuntimeOnly "vazkii.patchouli:Patchouli:1.20.1-84.1-FORGE"

    modImplementation "curse.maven:caelus-308989:5281700"
    modImplementation "curse.maven:geckolib-388172:6333474"
    modImplementation "curse.maven:curios-309927:6418456"
    modImplementation "curse.maven:irons-spells-n-spellbooks-855414:7907340"
    modImplementation "curse.maven:irons-lib-1492763:8156266"

    modImplementation "curse.maven:embeddium-908741:5681725"
    modImplementation "curse.maven:oculus-581495:6020952"
    modImplementation "curse.maven:better-brightness-slider-685037:4656287"
    modImplementation "curse.maven:jade-324717:6855440"
    modImplementation "curse.maven:freecam-by-zergatul-618947:5402097"
    modImplementation "curse.maven:playeranimator-658587:4587214"
    modImplementation "curse.maven:mmmmmmmmmmmm-225738:6860192"
    modImplementation "curse.maven:selene-499980:7027387"

    modImplementation "dev.architectury:architectury-forge:${architectury_version}"
    modImplementation "dev.latvian.mods:rhino-forge:${rhino_version}"
    modImplementation "dev.latvian.mods:kubejs-forge:${kubejs_version}"
    modImplementation "io.github.flemmli97:mobbattle:${minecraft_version}-2.5.3-${mod_loader}"

    modRuntimeOnly "curse.maven:in-game-account-switcher-232676:5457030"
    modRuntimeOnly "curse.maven:lan-server-properties-387365:4776657"
    modRuntimeOnly "curse.maven:nbtedit-reborn-678133:5984630"

    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

kotlin {
    jvmToolchain(17)
}
